systemd: Fix header and reboot misalignment

--- a/pkg/systemd/overview.scss
+++ b/pkg/systemd/overview.scss
@@ -30,6 +30,8 @@
 }
 
 .ct-overview-header {
+  flex-direction: row;
+
   &,
   &-hostname {
     flex-wrap: wrap;
